# charsplitrs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  utils.rs
