[package]
name = "charsplitrs"
version = "0.2.0"
authors = ["Tobias Kolditz <tbs.kldtz@gmail.com>"]
license = "MIT"
description = "Improved Rust implementation of Don Tuggener's CharSplit."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"